--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Quicksand';
+  src: url('/fonts/Quicksand/static/Quicksand-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,4 +25,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.star-only {
+  clip-path: circle(30px at center);
+  transform: scale(0.4);
 }
